# django-htmx

./: .gitignore  LICENSE  README.md  package.json  pyproject.toml  tailwind.config.js
app/: settings.py  urls.py
core/: models.py  urls.py  views.py
core/migrations/: 0001_initial.py
static/: htmx.min.js
static/styles/: output.css  style.css
templates/: home.html
templates/components/: card.html
users/: models.py
users/migrations/: 0001_initial.py
